# firmware-server

./: README.md  pyproject.toml
diagrams/state-diagram/: state-diagram.puml
docs/: API.md  ARCHITECTURE.md  CLIENT.md  DEVELOPMENT.md
docs/diagrams/state-diagram/: state-diagram.puml
src/: main.py
src/api/: models.py
src/core/: state_machine.py
tests/mock/api_test_server/: main.py
tests/mock/mqtt_test_client/: main.py
